--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # NO ME SUBAS
-keys.js
+# keys.js
+
 
 # dependencies
 /node_modules
